cluster/apps/media/apps/radarr/app/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: media
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`radarr.${domain_name}`) && PathPrefix(`/`)
    services:
    - kind: Service
      name: radarr
      namespace: media
      port: 8989
    middlewares:
    - name: ak-outpost-proxy-outpost
      namespace: authentik
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
