cluster/apps/media/apps/radarr/app/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: radarr
  namespace: media
spec:
  hosts:
  - radarr.${domain_name}
  gateways:
  - istio-ingress/istio-ingressgateway
  http:
  - route:
    - destination:
        host: radarr.media.svc.cluster.local
        port:
          number: 8989
    match:
    - authority:
        exact: radarr.${domain_name}
      uri:
        prefix: /
